syntax = "proto3";
package todo;

import "google/api/annotations.proto";

service Todo {
    rpc List(ListRequest) returns (ListResponse){
        option (google.api.http) = {
            get: "/v1/todo"
        };
    }
    rpc Store(StoreRequest) returns (StoreResponse) {
        option (google.api.http) = {
            post: "/v1/todo"
            body: "*"
        };
    }
}

message ToDo {
    string id = 1;
    string title = 2;
    string description = 3;
    string reminder = 4;
}

message ListRequest {
    string api = 1;
    string keyword = 2;
}

message ListResponse {
    string api = 1;
    repeated ToDo toDos = 2;
}

message StoreRequest {
    string api = 1;
    string title = 2;
    string description = 3;
    string reminder = 4;
}

message StoreResponse {
    string api = 1;
    string id = 2;
    bool success = 3;
}
